새로운 급여관리, 새로운 임금테이블

--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -4,7 +4,7 @@
 {% block head %}
 <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
 
-<link rel="stylesheet" href="{% static 'css/humanresource/salary.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/humanresource/salary_new.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content-header %}
@@ -157,6 +157,8 @@
                 <td class="table-list_body-tr_td totalAssignment"></td>
                 <td class="table-list_body-tr_td totalAdditional"></td>
                 <td class="table-list_body-tr_td totalDeduction"></td>
+                <td class="table-list_body-tr_td totalTotal"></td>
+                <td class="table-list_body-tr_td totalTotal"></td>
                 <td class="table-list_body-tr_td totalTotal"></td>
             </tr>
         </tbody>
