--- a/salary/templates/salary/table2.html
+++ b/salary/templates/salary/table2.html
@@ -62,7 +62,7 @@
             <div class="orderListMainContents orderListMain2">이름</div>
             <div class="orderListMainContents orderListMain2 orderListMain3">직책</div>
         </div>
-        <!--고정헤더 done-->
+        <!--고정헤더 done-->ss
 
         <div class="orderListSubScroll">
 
