fix: 임금테이블 total 추가, 데이터 ,제거 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -207,6 +207,12 @@
                 <a href="{% url 'salary:table2' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블2</li>
                 </a>
+                <a href="{% url 'salary:table3' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">임금테이블3</li>
+                </a>
+                <a href="{% url 'HR:salary_new' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">급여관리2</li>
+                </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
                 </a>
