--- a/salary/templates/salary/table3.html
+++ b/salary/templates/salary/table3.html
@@ -281,7 +281,7 @@
                         <!-- 무사고수당 -->
                         <div class="addCommaToInnerText">{{data.accident_free_allowance}}</div>
                         <!-- 연차수당 -->
-                        <div class="addCommaToInnerText">{{data.annual_allowance}}</div>
+                        <div class="addCommaToInnerText">{{data.new_annual_allowance}}</div>
                         <!-- 계 -->
                         <div class="addCommaToInnerText">{{data.statutory_allowance}}</div>
                     </div>
