edit: 기본시급 글자 수정

--- a/salary/templates/salary/table3.html
+++ b/salary/templates/salary/table3.html
@@ -97,7 +97,7 @@
             <div class="thead">
                 <div class="theadDate">입사일자</div>
                 <div class="theadWorkTime">근무시간</div>
-                <div class="theadBasic">기본시급<br>(1)<br>30시간이하</div>
+                <div class="theadBasic">기본시급</div>
                 <!-- <div class="theadBasic">기본시급<br>(2)<br>30시간초과</div> -->
                 <div class="theadNormal">통상시급</div>
 
