--- a/static/css/humanresource/team2.css
+++ b/static/css/humanresource/team2.css
@@ -82,3 +82,16 @@
 .backgroundGray {
     background-color: #CDCDCE;
 }
+
+.TeamCreates{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: white;
+    border-radius: 0.2rem;
+    box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+    height: 15rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
